--- a/2、算法分析/算法分析.md
+++ b/2、算法分析/算法分析.md
@@ -7,3 +7,4 @@
 5. question3.py: 设计实验对比list和dict的del 操作
 6. q4q5_findk.py: 实现返回第k小的数。第一种方法依赖于列表的sort()，平均复杂度为O(nlog n)，第二种方法利用快排的思想查找，时间复杂度为O(n)
 7. quiksort.py: 实现快速排序（3种思路）
+8. maxSubSum.py: 几种方法实现最大子序列和
