--- a/4、递归/递归.md
+++ b/4、递归/递归.md
@@ -1,1 +1,11 @@
-### 第四章递归的书中代码及联系
+### 第四章递归的书中代码及练习
+
+1. fractal_tree.py: 实现分形树
+2. hanoi_tower.py: 汉诺塔问题
+3. intTostr.py: 递归实现整数转换为字符串
+4. list_sum.py: 列表求和的几种方法
+5. maze.py: 迷宫问题
+6. palindrome.py: 递归判断字符串是不是回文
+7. revese.py: 递归实现字符串反转
+8. sierpinski_triangle.py: 递归实现（谢尔宾斯基三角形）
+9. turtle_test.py: 一个简单的turtle的使用例子
