--- a/5、排序和搜索/排序和搜索.md
+++ b/5、排序和搜索/排序和搜索.md
@@ -1,1 +1,6 @@
 ### 第五章排序和搜索的书中代码和练习
+
+1. binary_Search.py: 二分查找
+2. hash_chain.py: 实现哈希映射（leetcode706）
+3. hash_Search.py: 实现哈希表（开放地址法）
+4. sequential_Search.py: 顺序搜索
