--- a/1、介绍/介绍.md
+++ b/1、介绍/介绍.md
@@ -4,3 +4,6 @@
 3. HalfAdder.py: 利用逻辑门类实现半加法器
 4. FullAdder.py: 利用逻辑门类实现全加法器
 5. infinite_mokey.py: 实现无限猴子定理
+6. gcd.py: 实现最大公约数
+7. mydict.py: 一个测试用例文件
+8. mydict: mydict.py基于mydict进行测试
