--- a/4、递归/递归.md
+++ b/4、递归/递归.md
@@ -9,3 +9,10 @@
 7. revese.py: 递归实现字符串反转
 8. sierpinski_triangle.py: 递归实现（谢尔宾斯基三角形）
 9. turtle_test.py: 一个简单的turtle的使用例子
+10. dpMakeChange.py: 动态规划解决最小硬币找零问题
+11. factorial.py: 递归实现数的阶乘
+12. fibonacci.py: 递归实现斐波那契数列
+13. fractal_mountain.py: 分形山
+14. hnoi_tower_improve.py: 改进汉诺塔算法，输出每一步3根柱子的状态
+15. hilbert_curve.py: 画出hilbert曲线
+16. koch_snowflake.py: 画出koch snowflake
