--- a/4、递归/递归.md
+++ b/4、递归/递归.md
@@ -16,3 +16,4 @@
 14. hnoi_tower_improve.py: 改进汉诺塔算法，输出每一步3根柱子的状态
 15. hilbert_curve.py: 画出hilbert曲线
 16. koch_snowflake.py: 画出koch snowflake
+17. minCoins.py: 递归找零及其优化
