--- a/5、排序和搜索/排序和搜索.md
+++ b/5、排序和搜索/排序和搜索.md
@@ -10,3 +10,9 @@
 8. mergeSort.py: 归并排序
 9. quickSort.py: 快速排序
 10. shellSort.py: 希尔排序
+11. bucketSort.py: 桶排序
+12. countSort.py: 计数排序
+13. heapSort.py: 堆排序
+14. radixSort.py: 基数排序
+15. selectionSort.py: 选择排序
+16. bidirectional_bubbleSort.py: 双向冒泡排序
