add code tree 6

--- a/6、树和树的算法/树和树的算法.md
+++ b/6、树和树的算法/树和树的算法.md
@@ -1,1 +1,15 @@
 ### 第六章树和树的算法书中的代码及练习题实现
+1. AvlTree.py: 实现创建平衡二叉查找树，平衡树的插入，删除还未实现完成
+2. binarySearchTree: 实现创建二叉查找树，插入，删除，递归遍历，利用中序后继结点实现中序遍历
+3. binaryTree.py: 实现创建二叉树，层次遍历，递归和非递归深度遍历(先，中，后序)，递归和非递归计算二叉树的高度，统计二叉树结点个数，递归计算二叉树第k层结点个数，递归计算二叉树叶子结点个数，判断两个二叉树是否相同，判断二叉树是否是二叉查找树，此方法创建的二叉树永远是完全二叉树。
+4. binaryTree2.py: 实现创建二叉树，插入左子结点，插入右子结点，遍历等。
+5. binaryTreeLists.py: 列表表示二叉树。
+6. binMaxHeap.py: 实现最大二叉堆。
+7. binMinHeap.py: 实现最小二叉堆并实现堆排序
+8. huffumanTree.py: 实现哈夫曼树及编解码
+9. minHeapFix: 实现固定容量的最小堆
+10. parseTree: 实现解析树。使用树来表示数学表达式。
+11. PriorityQueue.py: 使用二叉堆实现优先队列
+12. threadBinaryTree.py: 实现线索二叉树。（有问题需修改） 
+13. treeNode.py: 树的结点基类。
+14. trieTree.py: 前缀树。
