--- a/2、算法分析/算法分析.md
+++ b/2、算法分析/算法分析.md
@@ -1,10 +1,10 @@
 ### 第二章算法分析书中的代码及练习题实现
 
 1. findMin.py: 实现在数列中找到最小值。基于O(N)和O(N2)实现
-2. listanddict.py: 实现生成list的四种方法，并比较他们的时间差异，以及比较list和dict的差异。
-3. question1.py: 设计实验证明列表的索引操作时间复杂度为O(1)
-4. question2.py: 设计实验证明dict的get()和set()是O(1)
-5. question3.py: 设计实验对比list和dict的del 操作
-6. q4q5_findk.py: 实现返回第k小的数。第一种方法依赖于列表的sort()，平均复杂度为O(nlog n)，第二种方法利用快排的思想查找，时间复杂度为O(n)
+2. genlist_time.py: 实现生成list的四种方法，并比较他们的时间差异，以及比较list和dict的差异。
+3. listindex_time.py: 设计实验证明列表的索引操作时间复杂度为O(1)
+4. dict_getset_time.py: 设计实验证明dict的get()和set()是O(1)
+5. list_dict_del_time.py: 设计实验对比list和dict的del 操作
+6. findkmin.py: 实现返回第k小的数。第一种方法依赖于列表的sort()，平均复杂度为O(nlog n)，第二种方法利用快排的思想查找，时间复杂度为O(n)
 7. quiksort.py: 实现快速排序（3种思路）
 8. maxSubSum.py: 几种方法实现最大子序列和
